--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ h2 {
     bottom: 0;
     width: 60px;
     height: 30px;
-    font-size: 20px;
-    background: darkorange;
+    font-size: 10px;
+    background: darkblue;
 
 }
 
