--- a/style.css
+++ b/style.css
@@ -15,13 +15,16 @@ h2 {
     font-size: 25px;
     text-align: center;
 }
-.clock{
+
+.clock {
     display: flex;
 }
+
 .clock div {
     margin: 5px;
     position: relative;
 }
+
 .clock span {
     width: 100px;
     height: 80px;
@@ -32,8 +35,9 @@ h2 {
     opacity: .8;
     color: white;
     font-size: 50px;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
+
 .clock .text {
     height: 30px;
     font-size: 10px;
@@ -41,8 +45,8 @@ h2 {
     letter-spacing: 2px;
     background-color: darkblue;
     opacity: .8;
-
 }
+
 .clock #ampm {
     position: absolute;
     bottom: 0;
